--- a/jpa0208/src/main/resources/templates/board/boardList.html
+++ b/jpa0208/src/main/resources/templates/board/boardList.html
@@ -4,6 +4,8 @@
 <title>Insert title here</title>
 </head>
 <body>
+<section>
+<div align=center>
   <h1> 회원목록 보기 </h1>
   <table border=1>
    <tr align=center> <td>SEQ</td><td>TITLE</td><td>CONTENT</td><td>CREATE_DATE</td>
@@ -16,5 +18,17 @@
 	     <td th:text="${m.cnt}"></td>
      </tr>
   </table>
+</div>
+</section>
+<div align=center>
+<form action="/board/boardList">
+	<select name="ch1">
+		<option value="title">제목</option>
+		<option value="content">내용</option>
+	</select>
+	<input type=text name="ch2">
+	<input type=submit value="저장하기">
+</form>
+</div>
 </body>
 </html>	
